# final-project-level3-nlp-01

./: .gitignore  README.md  arguments.py  data_loader.py  evaluation.py  loss.py  model.py  pyproject.toml  student_model.py  teacher_model.py  train.py  train_kd.py  utils.py  wd_KdLoss_student_model.py  wd_KdLoss_teacher_model.py  wd_KdLoss_train.py  wd_WdLoss_student_model.py  wd_WdLoss_train.py  wd_student_config.py
.github/: reviewer-lottery.yml
client/: .eslintrc.js  Dockerfile  confirm_button_hack.py  create_text.py  main.py  package-lock.json  package.json  postcss.config.js  pyproject.toml  tailwind.config.js  util.py
client/public/: index.css  index.html
client/src/: App.svelte
configs/: config.yaml  eval_config.yaml  train.yaml
configs/data/: default.yaml
configs/decoder/: cn_gpt.yaml  en_gpt.yaml  gpt.yaml  ko_gpt.yaml
configs/encoder/: bert.yaml
experiment/: graformerModel.ipynb  graformermodel.ipynb  jp.ipynb  mmnt.ipynb  mmnt_dataloader.ipynb  models.py  train.py
model_server/: dto.py  main.py  model.py  pyproject.toml  service.py  test.http  util.py
model_server/en/: config.yaml
model_server/ko/: config.yaml
model_server/zh/: config.yaml
preprocess/: aihub_preprocess.ipynb  aihub_xlsx.ipynb  ja2zh.ipynb  jp_cn.ipynb  jp_en.ipynb  jp_gpt2.ipynb  load_data.ipynb  todo.md  zh-en.ipynb
server/: config.yaml  pyproject.toml  test.http
server/app/: main.py  service.py  util.py
server/app/core/: dto.py
wd_experiment/: weight_distillation_model_test.ipynb  weight_distillation_test.ipynb
