[tool.poetry]
name = "final-project-level3-nlp-01"
version = "0.1.0"
description = ""
authors = ["decyma <soos3121@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
transformers = "^4.13.0"
torch = "^1.10.0"
tqdm = "^4.62.3"
datasets = "^1.16.1"
hydra-core = "^1.1.1"
hydra-colorlog = "^1.1.0"
sentencepiece = "^0.1.96"
ipykernel = "^6.6.0"
ipywidgets = "^7.6.5"
protobuf = "^3.19.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
