[tool.poetry]
name = "client"
version = "0.1.0"
description = ""
authors = ["seokmin <soos0228@naver.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.2.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
