[tool.poetry]
name = "model_server"
version = "0.1.0"
description = ""
authors = ["seokmin <soos0228@naver.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
uvicorn = "^0.16.0"
pydantic = "^1.8.2"
PyYAML = "5.4.1"
torch = "^1.10.1"
transformers = "^4.14.1"
hydra-core = "^1.1.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
